# claudex

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  flake.nix  install.sh  rust-toolchain.toml
.cargo/: config.toml
.claude/skills/claudex/: SKILL.md
.github/workflows/: ci.yml  pages.yml  release.yml
src/: index.rs  lib.rs  main.rs  parser.rs  plan.rs  stats.rs  store.rs  types.rs  ui.rs
src/commands/: codex.rs  cost.rs  export.rs  files.rs  index.rs  mod.rs  models.rs  prs.rs  search.rs  session.rs  sessions.rs  summary.rs  tools.rs  turns.rs  update.rs  watch.rs
tests/: cli_tests.rs  completions_tests.rs  index_store_tests.rs  index_tests.rs
website/: index.md  package.json
website/.vitepress/: config.ts
website/.vitepress/theme/: style.css
website/commands/: codex.md  completions.md  cost.md  export.md  files.md  index-cmd.md  index.md  models.md  prs.md  search.md  session.md  sessions.md  summary.md  tools.md  turns.md  update.md  watch.md
website/guide/: architecture.md  color.md  completions.md  index.md  indexing.md  installation.md  json-output.md  quickstart.md  recipes.md  skill.md  troubleshooting.md  watch.md
website/reference/: environment.md  files.md  index.md  pricing.md  schema.md
