[package]
name = "claudex"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["James Brink <brink.james@gmail.com>"]
description = "Query, search, and analyze Claude Code sessions"
homepage = "https://github.com/utensils/claudex"
repository = "https://github.com/utensils/claudex"
readme = "README.md"
keywords = ["claude", "claude-code", "cli", "sessions"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
dirs = "5"
owo-colors = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
