[package]
name = "claudex"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
authors = ["James Brink <brink.james@gmail.com>"]
description = "Query, search, and analyze Claude Code sessions"
homepage = "https://github.com/utensils/claudex"
repository = "https://github.com/utensils/claudex"
readme = "README.md"
keywords = ["claude", "claude-code", "cli", "sessions"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
comfy-table = "7"
dirs = "6"
indicatif = "0.18"
owo-colors = { version = "4", features = ["supports-colors"] }
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
terminal_size = "0.4"

[dev-dependencies]
tempfile = "3"
