[package]
name = "claudex"
version = "0.2.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
authors = ["James Brink <brink.james@gmail.com>"]
description = "Query, search, and analyze Claude Code sessions from the command line — a Rust CLI that indexes ~/.claude/projects/ into SQLite and exposes reports as subcommands"
homepage = "https://utensils.io/claudex/"
documentation = "https://utensils.io/claudex/"
repository = "https://github.com/utensils/claudex"
readme = "README.md"
keywords = ["claude", "claude-code", "cli", "sessions", "anthropic"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
comfy-table = "7"
dirs = "6"
flate2 = "1"
indicatif = "0.18"
owo-colors = { version = "4", features = ["supports-colors"] }
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
terminal_size = "0.4"

[dev-dependencies]
tempfile = "3"
